about section height collapsing bug fixed

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -297,6 +297,20 @@
   color: #333333;
 }
 
+.footer {
+  padding: 40px 10px;
+  text-align: center;
+  color: rgba(255, 255, 255, 0.918);
+  background: #333333;
+  width: 100%;
+  margin-top: 60px;
+}
+.footer small {
+  font-size: 1.3rem;
+  word-spacing: 1px;
+  opacity: 0.9;
+}
+
 @media (max-width: 859px) {
   .jobs__board {
     display: flex;
@@ -383,20 +397,20 @@
 }
 @media (max-width: 830px) {
   .about {
-    display: inline-block;
+    flex-direction: column;
     position: relative;
     margin-top: 50px;
   }
   .about__img {
     width: 100%;
-    position: absolute;
-    top: 0;
     opacity: 0.7;
+    order: 2;
+    margin-top: -220px;
   }
   .about__body {
     width: 100%;
-    position: absolute;
-    top: 0;
+    order: 1;
+    z-index: 5;
   }
 }
 @media (max-width: 520px) {
