--- a/src/assets/sass/component/_footer.scss
+++ b/src/assets/sass/component/_footer.scss
@@ -1,22 +1,16 @@
 .footer {
-  padding: 40px 10px;
-  text-align: center;
-  color: rgba(255, 255, 255, 0.918);
-  background: darken($color-5, 28%);
-  position: relative;
-  width: 100%;
-  bottom: 0;
-  margin-top: 50px;
+   padding: 40px 10px;
+   text-align: center;
+   color: rgba(255, 255, 255, 0.918);
+   background: $black;
+   // position: relative;
+   width: 100%;
+   // bottom: 0;
+   margin-top: 60px;
 
-  small {
-    font-size: 1.3rem;
-    word-spacing: 1px;
-    opacity: 0.9;
-  }
-
-  strong {
-    margin: 0 5px;
-    letter-spacing: 3px;
-    color: $yellow;
-  }
+   small {
+      font-size: 1.3rem;
+      word-spacing: 1px;
+      opacity: 0.9;
+   }
 }
